# MLOps

.dvc/: config
lab0/: .gitignore  pyproject.toml  requirements.txt  train.py
lab0/src/: config.py  data_loader.py  feature_engineering.py  model_trainer.py
lab1/: .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt  train.py
lab1/conf/: config.yaml
lab1/conf/data/: titanic.yaml
lab1/conf/model/: logistic_regression.yaml  random_forest.yaml
lab1/src/: data_loader.py  feature_engineering.py  model_trainer.py
lab2/: .gitignore  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
lab2/src/: prepare.py  train.py
lab3/: feature_store_design.md
lab4/: .env.example  .gitignore  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
lab4/src/: predict.py  prepare.py  register_best.py  train.py
lab6/: .gitignore  pyproject.toml  requirements.txt
lab6/app/: main.py  model.py  schemas.py
lab6/bruno/: 02_predict_single.bru  03_predict_batch.bru  04_predict_validation_error.bru  bruno.json
lab7/: .env.example  .gitignore  pyproject.toml  requirements.txt
lab7/flows/: batch_prediction.py
lab7/scripts/: load_test_data.py
