[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "titanic-mlflow-pipeline"
version = "0.1.0"
description = "Titanic DVC pipeline with MLflow tracking and DagHub model registry"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "dvc>=3.0.0",
    "mlflow>=2.10.0",
    "dagshub>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "black>=24.0.0",
    "isort>=5.13.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501", "N803", "N806"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["src"]
